cluster/core/monitoring-service/kube-prometheus-stack/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: kube-controller-manager
  namespace: kube-system
  labels:
    app.kubernetes.io/name: kube-controller-manager
subsets:
  - addresses:
      - ip: 192.168.100.201
      - ip: 192.168.100.202
      - ip: 192.168.100.203
      - ip: 192.168.100.204
      - ip: 192.168.100.205
    ports:
      - name: https-metrics
        port: 10257
        protocol: TCP

---
apiVersion: v1
kind: Endpoints
metadata:
  name: kube-scheduler
  namespace: kube-system
  labels:
    app.kubernetes.io/name: kube-scheduler
subsets:
  - addresses:
      - ip: 192.168.100.201
      - ip: 192.168.100.202
      - ip: 192.168.100.203
      - ip: 192.168.100.204
      - ip: 192.168.100.205
    ports:
      - name: https-metrics
        port: 10259
        protocol: TCP
