cluster/core/monitoring-service/kube-prometheus-stack/ingress-traefikCRD.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: default
  labels:
    app.kubernetes.io/name: prometheus
spec:
  entryPoints:
    - https
  routes:
    - kind: Rule
      match: Host(`prom.${SECRET_DOMAIN}`)
      middlewares:
        - name: headers@file
        - name: local-only@file
      services:
        - name: prometheus-k8s
          port: 9090
          namespace: monitoring-system
  tls:
    secretName: "kube-prometheus-stack-tls"
